# cjeu-py

./: .gitignore  CITATION.cff  CODEBOOK.md  LICENSE  README.md  pyproject.toml  requirements.txt
cjeu_py/: __init__.py  browse.py  codebook.py  config.py  export.py  main.py  network_export.py  search.py
cjeu_py/citation_extraction/: context_window.py  party_names.py  regex_extractor.py
cjeu_py/classification/: classifier.py  human_validation.py  pipeline.py  prompts.py
cjeu_py/data_collection/: cellar_client.py  curia_scraper.py  judgment_header.py  merge_sources.py  text_fetcher.py
cjeu_py/llm/: client.py
cjeu_py/utils/: logging_utils.py  text_processing.py
docs/: cli-reference.md
examples/: grand_chamber_network.html
gui/: app.py
tests/: test_browse.py  test_header_parser.py  test_llm_client.py  test_regex_extractor.py  test_search.py  test_taxonomy.py
